[package]
authors = ['Parami Devs <info@parami.io>']
description = 'Parami NFT Pallet'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-nft'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies]
parami-did = { path = '../did', default-features = false }
parami-linker = { path = '../linker', default-features = false, optional = true }
parami-ocw = { path = '../ocw', default-features = false }
parami-swap = { path = '../swap', default-features = false, optional = true }
parami-traits = { path = '../traits', default-features = false }

ethabi = { git = 'https://github.com/rust-ethereum/ethabi.git', tag = 'v17.1.0', default-features = false, features = [
    'parity-codec',
    'rlp',
] }
hex = { version = '0.4', default-features = false }
serde = { version = '1.0.0', optional = true }
tracing = { version = '0.1', default-features = false }

sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-runtime-interface = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.24' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
log = { version = "0.4.14", default-features = false }

[dev-dependencies]
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

pallet-assets = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
pallet-uniques = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
parami-primitives = { path = '../../primitives' }
parami-tag = { path = '../tag' }
parking_lot = { version = "0.12.0" }

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking', 'parami-linker', 'parami-swap']

std = [
    'parami-did/std',
    'parami-linker/std',
    'parami-ocw/std',
    'parami-swap/std',
    'parami-traits/std',

    'ethabi/full-serde',
    'hex/std',
    'serde',
    'tracing/std',

    'codec/std',
    'scale-info/std',

    'sp-core/std',
    'sp-runtime/std',
    'sp-runtime-interface/std',
    'sp-std/std',

    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
]

try-runtime = ['frame-support/try-runtime']
