[package]
name = "parami-swap"
description = "Social coin swap"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Parami devs <info@parami.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }
integer-sqrt = "0.1.2"

sp-std = { git = "https://github.com/paritytech/substrate", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }
#pallet-assets = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

 parami-assets = { path = "../assets", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/substrate" }
sp-core = { git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", version = "4.0.0-dev", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "log/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "parami-assets/std",
]
try-runtime = ["frame-support/try-runtime"]
