[package]
authors = ['Parami Devs <info@parami.io>']
description = 'AD3 Tag Pallet'
edition = '2021'
homepage = 'https://parami.io'
license = 'GPL-3.0-only WITH Classpath-exception-2.0'
name = 'parami-tag'
publish = false
repository = 'https://github.com/parami-protocol/parami-blockchain/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.scale-info]
default-features = false
features = ['derive']
version = '2.1.1'

[dependencies]
parami-advertiser = { path = '../advertiser', default-features = false, optional = true }
parami-did = { path = '../did', default-features = false, optional = true }
parami-traits = { path = '../traits', default-features = false }

num-traits = { version = '0.2', default-features = false, features = ['libm'] }
serde = { version = '1.0.0', optional = true }

sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate', default-features = false, optional = true, branch = 'polkadot-v0.9.24' }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24', default-features = false }

[dev-dependencies]
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.24' }

[features]
default = ['std']

runtime-benchmarks = ['frame-benchmarking', 'parami-advertiser', 'parami-did']

std = [
    'parami-advertiser/std',
    'parami-did/std',
    'parami-traits/std',

    'serde',

    'codec/std',
    'scale-info/std',

    'sp-runtime/std',
    'sp-std/std',

    'frame-benchmarking/std',
    'frame-support/std',
    'frame-system/std',
]

try-runtime = ['frame-support/try-runtime']
